2015-01-25
 - First pypi version
 - Adding < stdin redirect